# codebook

./: .aider.chat.history.md  .aider.conf.yml  .aider.input.history  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  codebook.toml  package.json  refactor.md
.aider.tags.cache.v3/: cache.db
.claude/: settings.local.json
crates/codebook/: Cargo.toml
crates/codebook/src/: checker.rs  errors.rs  lib.rs  main.rs  parser.rs  queries.rs  regexes.rs  regions.rs  splitter.rs
crates/codebook/src/dictionaries/: combined.gen.txt  dictionary.rs  manager.rs  mod.rs  repo.rs  transliteration.rs
crates/codebook/src/queries/: README.md  bash.scm  c.scm  cpp.scm  csharp.scm  css.scm  dart.scm  elixir.scm  erlang.scm  go.scm  haskell.scm  html.scm  java.scm  javascript.scm  just.scm  latex.scm  lua.scm  markdown.scm  ocaml.scm  odin.scm  php.scm  python.scm  r.scm  ruby.scm  rust.scm  svelte.scm  swift.scm  typescript.scm  typst.scm  vhdl.scm  yaml.scm  zig.scm
crates/codebook/tests/: test_c.rs  test_config.rs  test_cpp.rs  test_csharp.rs  test_css.rs  test_custom_dicts.rs  test_dart.rs  test_elixir.rs  test_erlang.rs  test_files.rs  test_go.rs  test_java.rs  test_javascript.rs  test_latex.rs  test_lua.rs  test_markdown.rs  test_ocaml.rs  test_odin.rs  test_php.rs  test_python.rs  test_regex.rs  test_ruby.rs  test_rust.rs  test_svelte.rs  test_swift.rs  test_tags.rs  test_text.rs  test_toml.rs  test_typescript.rs  test_typst.rs  test_vhdl.rs  test_yaml.rs  test_zig.rs
crates/codebook/tests/examples/: custom_dict.txt  example.c.in  example.lua  example.odin
crates/codebook/tests/languages/: assert_helpers.rs  main.rs  test_c.rs  test_config.rs  test_cpp.rs  test_csharp.rs  test_css.rs  test_dart.rs  test_elixir.rs  test_erlang.rs  test_files.rs  test_go.rs  test_haskell.rs  test_java.rs  test_javascript.rs  test_just.rs  test_latex.rs  test_lua.rs  test_markdown.rs  test_ocaml.rs  test_odin.rs  test_php.rs  test_python.rs  test_r.rs  test_regex.rs  test_ruby.rs  test_rust.rs  test_suggestions.rs  test_svelte.rs  test_swift.rs  test_tags.rs  test_text.rs  test_toml.rs  test_typescript.rs  test_typst.rs  test_vhdl.rs  test_yaml.rs  test_zig.rs  utils.rs
crates/codebook/tests/utils/: mod.rs
crates/downloader/: Cargo.toml  spec.md
crates/downloader/src/: lib.rs
examples/: da.md  de.md  example.adoc  example.astro  example.cpp  example.cs  example.dart  example.erl  example.ex  example.go  example.h  example.jsx  example.just  example.lua  example.md  example.mdx  example.ml  example.odin  example.py  example.rb  example.rs  example.sh  example.svelte  example.tex  example.tsx  example.txt  example.typ  example.vhd  example.vue  example.zig  grc.md  la.md  lv.md  nl.md  sa.md  sl.md  vi_vn.md
integration_tests/: index.test.ts
journal/: add_language_support.md
scripts/: release_lsp.ts
vscode-extension/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  build.sh  package.json  tsconfig.json
word_lists/: c.txt  codebook.txt  cpp.txt  css.txt  erlang.txt  extensions.txt  git.txt  (+8 more)
(+35 files in other folders)
