[package]
name = "codebook"
version = "0.3.19"
edition = "2024"
description = "A code-aware spell checker library (dependency for codebook-lsp)"
authors = ["Codebook Contributors"]
license = "MIT"
repository = "https://github.com/blopker/codebook"
homepage = "https://github.com/blopker/codebook"
documentation = "https://github.com/blopker/codebook"
readme = "../../README.md"
keywords = ["code", "autocomplete", "language", "lsp"]
categories = ["development-tools", "text-processing"]
# This is primarily used as a dependency for codebook-lsp

# Binary for internal testing only
[[bin]]
name = "codebook"
path = "src/main.rs"

[dependencies]
env_logger.workspace = true
fs2.workspace = true
lazy_static.workspace = true
log.workspace = true
lru.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
spellbook.workspace = true
streaming-iterator.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-css.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-go.workspace = true
tree-sitter-haskell.workspace = true
tree-sitter-html.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
codebook-tree-sitter-latex.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-r.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-typescript.workspace = true
codebook-tree-sitter-typst.workspace = true
tree-sitter-zig.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter.workspace = true
unicode-segmentation.workspace = true

codebook_config.workspace = true
codebook_downloader.workspace = true

[target.'cfg(not(target_os = "windows"))'.dependencies]
pprof.workspace = true


[dev-dependencies]
tempfile.workspace = true
