[package]
name = "codebook_downloader"
version = "0.3.41"
edition = "2024"
description = "Dictionary downloading utility for the Codebook spell checker"
authors = ["Codebook Contributors"]
license = "MIT"
repository = "https://github.com/blopker/codebook"
homepage = "https://github.com/blopker/codebook"
documentation = "https://github.com/blopker/codebook"
readme = "../../README.md"
keywords = ["download", "dictionary", "spell-checker"]
categories = ["development-tools", "text-processing"]

[features]
# Panic on any non-loopback network request (pytest-socket style). Workspace
# crates enable this from their dev-dependencies so test builds deny network.
deny-network = []

[dependencies]
anyhow.workspace = true
base16ct.workspace = true
chrono.workspace = true
log.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-platform-verifier.workspace = true
webpki-roots.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
